Fix dialog box overlap on mobile
see https://github.com/liqd/a4-meinberlin/issues/82#issuecomment-289845699

--- a/meinberlin/assets/scss/components/_header.scss
+++ b/meinberlin/assets/scss/components/_header.scss
@@ -1,10 +1,6 @@
 .main-header {
     position: relative;
     z-index: 1;
-
-    @media screen and (max-width: $breakpoint) {
-        padding: 0.5em 0;
-    }
 }
 
 .main-nav {
